@@ -101,6 +101,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: Logitech Harmony Hub code
 - Fixed: HTTP Notification (Script) stop url encoding subject/message
 - Implemented: KMTronic USB-> RS485 relay hardware
+- Implemented: Extra check in short-log cleanup
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
